2012-07-02 Jens Thoms Toerring    <jt@toerring.de>

	lib/objects.c: Attempt to avoid a massive slow-down observed
	by Rob Carpenter while creating and deleting forms due to
	much too many calls of fli_recalc_intersections().
	lib/button.c: Some mis-handling of mouse buttons a button
	isn't supposed to react to found by Rob fixed.

2012-06-12 Jens Thoms Toerring    <jt@toerring.de>

	lib/tbox.c: Problem poinyed out by Rob Carpenter with
	fl_addto_browser_chars() when first seting an "escape
	sequence" and then text (which resulted in the effects of
	the escape sequence getting lost) fixed.

2012-04-12 Jens Thoms Toerring    <jt@toerring.de>

	* lib/xtext.c: Problem when drawing strings with zero or
	negative "height" fixed
	* lib/positioner.c: Function for selecting which mouse
	a positioner reacts to added
	* lib/button.c: Button now reacts only to the release of
	the mouse button that was pressed first on it

2012-03-25 Jens Thoms Toerring    <jt@toerring.de>

	lib/xtext.c: Added fl_get_label_char_at_mouse() function
	and new demo program 'strange_button.c'.
	lib/events.c, lib/handling.c: Added new function
	fl_current_event() that allows callbacks to determine
	the Xforms event they were called for (instead of the
	raw XEvent as it can be obtained with fl_last_event()).

2012-03-24 Jens Thoms Toerring    <jt@toerring.de>

	lib/xtext.c, lib/input.c: Clean-up in string drawing routine
	(and detection of mouse position in a string) - labels are
	now more properly positioned.

2012-03-21 Jens Thoms Toerring    <jt@toerring.de>

	lib/symbols.c: Simplifications (control sequences are now more
	powerful and the order is unimportant) and new function for
	removing symbols.
	lib/vstrcat.c: Removed the file after rewriting the only
	function in lib/errmsg.c that used anything from that file.
	lib/objects.c: Changed signature of fl_get_object_bw()
	to match the documentation (it now returns an int and
	takes only a single argument).