@@ -502,7 +502,7 @@ handle_move( const XEvent * xev )
             set_bounding_box( 0.0, 0.0, cur_form->w, cur_form->h );
             fl_winresize( main_window, cur_form->w, cur_form->h );
 
-            fl_notify_object( selobj[ 0 ], FL_RESIZED );
+            fli_notify_object( selobj[ 0 ], FL_RESIZED );
         }
     }
     else if ( s )
@@ -573,7 +573,7 @@ handle_move( const XEvent * xev )
                 selobj[ i ]->fb1 -= y;
                 selobj[ i ]->fb2 -= y;
 
-                fl_notify_object( selobj[ i ], FL_RESIZED );
+                fli_notify_object( selobj[ i ], FL_RESIZED );
             }
         }
     }
@@ -641,7 +641,7 @@ move_selection( FL_Coord dx,
             ob->fb1 -= dy;
             ob->fb2 -= dy;
 
-            fl_notify_object( ob, FL_RESIZED );
+            fli_notify_object( ob, FL_RESIZED );
         }
     }
 
@@ -733,7 +733,7 @@ resize_selection( FL_Coord dx,
             selobj[ i ]->fb1 -= y;
             selobj[ i ]->fb2 -= y;
 
-            fl_notify_object( selobj[ i ], FL_RESIZED );
+            fli_notify_object( selobj[ i ], FL_RESIZED );
         }
 
     fli_recalc_intersections( cur_form );
@@ -1324,7 +1324,7 @@ paste_selection(void)
             selobj[ i ]->fb1 -= shift;
             selobj[ i ]->fb2 -= shift;
 
-            fl_notify_object( selobj[ i ], FL_RESIZED );
+            fli_notify_object( selobj[ i ], FL_RESIZED );
         }
 
     cleanup_selection( );
